--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,60 @@
-huggingface_hub==0.22.2
+huggingface-hub==0.23.4
+google-cloud-vision==3.7.2
+googleapis-common-protos==1.63.1
+gradio==4.36.1
+gradio_client==1.0.1
+langchain==0.2.5
+langchain-community==0.2.5
+langchain-core==0.2.7
+langchain-experimental==0.0.61
+langchain-text-splitters==0.2.1
+langdetect==1.0.9
+langsmith==0.1.77
+layoutparser==0.3.4
+packaging==24.1
+pandas==2.2.2
+pdf2image==1.17.0
+pdfminer.six==20231228
+pdfplumber==0.11.1
+pikepdf==9.0.0
+pillow==10.3.0
+pillow_heif==0.16.0
+portalocker==2.8.2
+proto-plus==1.23.0
+protobuf==4.25.3
+pyarrow==16.1.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycocotools==2.0.8
+pycparser==2.22
+pydantic==2.7.4
+pydantic_core==2.18.4
+pydeck==0.9.1
+pydub==0.25.1
+Pygments==2.18.0
+pyparsing==3.1.2
+pypdf==4.2.0
+pypdfium2==4.30.0
+pyreadline3==3.4.1
+pytesseract==0.3.10
+python-dateutil==2.9.0.post0
+tiktoken==0.7.0
+timm==1.0.3
+tokenizers==0.19.1
+toml==0.10.2
+tomlkit==0.12.0
+toolz==0.12.1
+torch==2.3.1
+torchvision==0.18.1
+tornado==6.4.1
+tqdm==4.66.4
+transformers==4.41.2
+typer==0.12.3
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.1
+ujson==5.10.0
+unstructured==0.14.6
+unstructured-client==0.23.7
+unstructured-inference==0.7.35
+unstructured.pytesseract==0.3.12
